# modeller

./: .gitignore  CMakeLists.txt  README.md  main.cpp
calss/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  lib.h
shaders/: default_vertex_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
